--- a/hydrotrend/Dockerfile
+++ b/hydrotrend/Dockerfile
@@ -1,17 +1,20 @@
 FROM lsucrc/crcbase
-         
-WORKDIR /root
-RUN wget https://github.com/kettner/hydrotrend/archive/master.zip 
-RUN unzip master.zip 
-WORKDIR hydrotrend-master
-RUN mkdir _build 
-WORKDIR _build
+USER crcuser
+WORKDIR /model
+
+# download the source code
+RUN git clone https://github.com/kettner/hydrotrend.git
+WORKDIR hydrotrend
+RUN mkdir build 
+WORKDIR build
 RUN cmake ./..
 RUN make
-RUN make install
+ENV PATH $PATH:/model/hydrotrend/build
+RUN chmod +rx /model/hydrotrend/build/run_hydrotrend
 
+# running a testing case
 WORKDIR ../data
 RUN cp -r input/ HYDRO_IN
 RUN mkdir HYDRO_OUTPUT
-RUN hydrotrend -V
+RUN run_hydrotrend -V
 RUN diff HYDRO_OUTPUT/HYDROASCII.Q output/HYDROASCII.Q
